# cpp

./: .gitignore  Adaptor.cpp  CMakeLists.txt  CRTP.cpp  Decorator.cpp  DecoratorStatic.cpp  Executor.cpp  Fluent.cpp  LICENSE  README.md  ScopeGuard.cpp  ScopedVariable.cpp  Singleton.cpp  Visitor.cpp  conanfile.txt  configure.sh
TMP/: reflection.h  tmp.cc
allocators/: PoolAllocator.h
concurrency/: CMakeLists.txt  TokenBucketRateLimiter.cpp  TokenBucketRateLimiter.h  broadcast_queue.h  concurrent_linked_list.h  concurrent_queue.h  concurrent_stack.h  rate_limiter.h  thread_safe_linked_list.h
cpp/: README
cpp/cpp17/: assert.cpp  constructor_printing_class.h  optional.cpp
cpp17/: assert.cpp  optional.cpp  variant.cpp
data_structures/: CMakeLists.txt  CustomUniquePtr.h  circular_array.h  optional.h  test_circular_array.cc
design_patterns/: Adaptor.cpp  CMakeLists.txt  CRTP.cpp  Decorator.cpp  DecoratorStatic.cpp  Executor.cpp  Mixin.h  ScopeGuard.cpp  crtp.h  crtp_new.h
metaprogramming/: CMakeLists.txt  conditional.h  main.cc
multi-threading/: concurrent_rate_limiter.cpp  concurrent_rate_limiter.h  tll.h
test/: CMakeLists.txt  test_circular_array.cc  test_concurrent_rate_limiter.cc  test_concurrent_stack.cc  test_crtp.cc  test_crtp_new.cpp  test_custom_unique_ptr.cpp  test_decorator_static.cc  test_main.cc  test_mixin.cc  test_optional.cc  test_pool_allocator.cpp  test_sfinae.cpp  test_typelist.cpp
test/odr/: CMakeLists.txt  Implementation1.cpp  Implementation1.h  Implementation2.cpp  Implementation2.h
test/perf/: CMakeLists.txt  perf_circular_array.cc
